# FastEMRIWaveforms

./: .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AAK_spinning.py  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Check.py  InstallationInstructions.md  KerrEquatorialPaper.md  LICENSE  M1_environment.yml  PAPERS.bib  README.md  SeparatrixInterpolant_example.ipynb  TODO.txt  Tutorial_interpolation.ipynb  back_int_schw.py  backwards_integration_example.py  check.py  create_waveform.py  fd_test.py  fdtest_copy.py  fixed_timestep_example.py  get_grid_TPI.py  gpu_test.py  install.sh  integrate_backwards.py  issues.py  likelihood.py  move_files  my_test_traj.py  nn.py  prior_emri.py  produce_TPI_coeff.py  pyNIT_tolerance_check.ipynb  (+9 more)
.ci-environments/: environment.yml  macos-arm-environment.yml
.devcontainer/: Dockerfile  devcontainer.json  install_cuda_toolkit.sh  setup.sh
.github/workflows/: documentation-links.yml  pages.yml  publish.yml  python-package-conda.yml  python-unittest.yml  run-tests.yml  tests.matrix.private.json  tests.matrix.public.json
EllipticIntegrals/: EllK_interp.cpp  main  spline.cpp
KerrEquatorialCodes/: speed_gpu.py
KerrEquatorialCodes/InterpolationComparison/: bicubic_separatrix.py  tricubic_grid.py
KerrEquatorialCodes/TrajectoryChecking/: rootsolve_separatrix.py
KerrEquatorialCodes/UtilityChecking/: TestingUtilities.ipynb
SlowFluxWaveform/: README.md  SConstruct
SlowFluxWaveform/include/: SpinWeightedSphericalHarmonics.hh
SlowFluxWaveform/src/: FluxInspiral.cc  Interpolant.cc  SConscript  SpinWeightedSphericalHarmonics.cc
TestKerrEquatorial/: check_newdata_Schw.py
cmake/: CPM.cmake  FEW.cmake
data_for_FEW/: Zachdata_schwarzschild_np257_ne129_29-04-24.txt
data_for_FEW/fluxes/: a0.00_xI1.000.flux  a0.10_xI-1.000.flux  a0.10_xI1.000.flux  a0.20_xI-1.000.flux  a0.20_xI1.000.flux  a0.30_xI-1.000.flux  a0.30_xI1.000.flux  a0.40_xI-1.000.flux  a0.40_xI1.000.flux  a0.50_xI-1.000.flux  a0.50_xI1.000.flux  a0.60_xI-1.000.flux  a0.60_xI1.000.flux  a0.70_xI-1.000.flux  a0.70_xI1.000.flux  a0.80_xI-1.000.flux  a0.80_xI1.000.flux  a0.90_xI-1.000.flux  a0.90_xI1.000.flux  a0.95_xI-1.000.flux  a0.95_xI1.000.flux  (+4 more)
docs/: Makefile
examples/: Amplitude_tutorial.ipynb  FEEDBACK.txt  FastEMRIWaveforms_tutorial.ipynb  Quickstart_guide.ipynb  SchwarzschildEccentricWaveform_intro.ipynb  Trajectory_tutorial.ipynb  Tutorial_FD_construction_single_mode.ipynb  Tutorial_FrequencyDomain_Waveforms.ipynb  Waveform_tutorial.ipynb  backwards_integration_example.py  cubicspline.ipynb  example_ode_base_pn5_add_phys.cc  example_pn5_add_phys_waveform.py  fixed_timestep_example.py  modeselect.ipynb  modesummation.ipynb  paper_plots.ipynb  swsh.ipynb  utility.ipynb  waveform.ipynb
few/: FastEMRIWaveforms.pyx  __init__.py  amplitude.py  create_waveform.py  direct_mode_sum.py  few.py  flux.py  infomat.py  interpolated_mode_sum.py  mode_filter.py  multi_M_wave.py  nit.py  nn.py  waveform.py  ylm.py
include/: AmpInterp2D.hh  Amplitude.hh  FluxInspiral.hh  FundamentalFrequencies.hh  Inspiral.hh  Inspiral5PN.hh  Interpolant.h  KerrEqCirc.h  KerrEquatorial.h  ParameterMapAAK.hh  Spheroidal_PN.h  TensorProductInterpolation.h  Utility.hh  Zlmkn8_5PNe10.h  cuda_complex.hpp  dIdt8H_5PNe10.h  global.h  gpuAAK.hh  interpolate.hh  ode_base.hh  ode_base_example.hh  spline.hpp
inspiral/: FLUX.pyx  FluxInspiral.c  FluxInspiral.pyx  NIT.pyx  SConstruct
scripts/: prebuild.py
src/: AmpInterp2D.cpp  AmpInterp2D.cu  Amplitude.cc  CMakeLists.txt  FLUX.pyx  FluxInspiral.cc  FundFreqs.pyx  FundamentalFrequencies.cc  Inspiral.cc  Inspiral5PN.cc  Interpolant.cc  KerrEqCirc.cc  KerrEquatorial.cc  ParMap.pyx  ParameterMapAAK.cc  Pn5.pyx  SWSH.cc  Spheroidal_PN.cu  TPI.pyx  TensorProductInterpolation.c  Utility.cc  Zlmkn8_5PNe10_base.c  Zlmkn8_5PNe10_base.cu  cuda_complex.hpp  dIdt8H_5PNe10.cc  elliptic.cu  elliptic.hh  global.h  gpuAAK.cu  gpuAAKWrap.pyx  hZ_2mkP0_5PNe10.cu  inspiralwrap.pyx  interpolate.cu  kernel.cu  kernel.hh  manager.cu  matmul.cu  ode_base.cc  ode_base_example.cc  pyinterp.pyx  (+5 more)
src/few/: CMakeLists.txt  __init__.py  _editable.py  _globals.py  git_version.py.in
src/few/amplitude/: ampinterp2d.py  base.py  romannet.py
src/few/cmd/: citations.py  files.py
src/few/cutils/: AmpInterp2D.cu  AmpInterp2D.hh  CMakeLists.txt  __init__.py  cuda_complex.hpp  global.h  gpuAAK.cu  gpuAAKWrap.pyx  interpolate.cu  interpolate.hh  matmul.cu  matmul.hh  pyAmpInterp2D.py  pyAmpInterp2D_cpu.py  pyampinterp2D.pyx  pycpuAAK.py  pygpuAAK.py  pyinterp.py  pyinterp.pyx  pyinterp_cpu.py  pymatmul.py  pymatmul.pyx  pymatmul_cpu.py  wrappers.py
src/few/cutils/cpu/: __init__.py
src/few/cutils/cuda11x/: __init__.py
src/few/cutils/cuda12x/: __init__.py
src/few/cutils/fast/: __init__.py
src/few/cutils/fast_selector/: __init__.py
src/few/data/: .gitignore
src/few/files/: __init__.py  cli.py  manager.py  registry.py  registry.schema.json  registry.yml
src/few/summation/: aakwave.py  base.py  directmodesum.py  fdinterp.py  interpolatedmodesum.py
src/few/tests/: base.py
src/few/trajectory/: base.py  dopr853.py  inspiral.py  integrate.py  mike-integrate.py
src/few/trajectory/ode/: __init__.py  base.py  flux.py  pn5.py
src/few/utils/: __init__.py  baseclasses.py  citations.py  config.py  constants.py  elliptic.py  exceptions.py  fdutils.py  geodesic.py  globals.py  logging.py  mappings.py  modeselector.py  pn_map.py  utility.py  ylm.py
src/few/utils/mappings/: __init__.py  common.py  jacobian.py  kerrecceq.py  pn.py  schwarzecc.py
src/few/waveform/: __init__.py  base.py  waveform.py
tests/: __init__.py  __main__.py  base.py  test_aak.py  test_amplitude.py  test_amplitudes.py  test_detector_wave.py  test_fd.py  test_few.py  test_kerr.py  test_mappings.py  test_mode_selector.py  test_mode_summation.py  test_physics.py  test_traj.py  test_utility.py  test_ylm.py
weights/: SE_b10.txt  SE_b4.txt  SE_b5.txt  SE_b7.txt  SE_b9.txt  SE_w1.txt  SE_w10.txt  SE_w12.txt  SE_w2.txt  SE_w4.txt  SE_w5.txt
(+732 files in other folders)
